# batik

./: .envrc  .gitignore  .travis.yml  Makefile  TODO.md  go.mod  go.sum
.github/workflows/: ci.yml
app/: atexit.go  atexit_test.go  batik.go  batik_test.go  config.go  context.go  context_test.go  db.go  exit_handlers.go  exitcodes.go  logspec.go  metadata.go  metadata_test.go  server.go  server_test.go  shell.go  start.go  status.go
app/options/: config.go  config_test.go  doc.go  flags.go  grpc.go  ledger.go  ledger_test.go  server.go  server_test.go  tls.go  tls_test.go
ci/: merge-forward
cmd/batik/: .gitignore  main.go
cmd/docgen/: .gitignore  main.go
integration/: ports.go
integration/config/: config_suite_test.go  config_test.go
integration/grpc/: grpc_suite_test.go  grpc_test.go
pkg/atexit/: atexit.go  atexit_test.go
pkg/btest/: btest.go  btest_test.go
pkg/buildinfo/: buildinfo.go  buildinfo_test.go
pkg/conf/: config.go  config_test.go  pathsearch.go  (+3 more)
protos/: prototool.yaml
rust/sigval/: .gitignore  Cargo.toml  build.rs
rust/sigval/src/batik/: mod.rs
rust/sigval/src/messages/: mod.rs  resolved.rs  transaction.rs  validation_api.rs
scripts/: compile-protos  run-integration-tests  run-linting  run-unit-tests
tools/: .gitignore  go.mod  go.sum  tools.go
wasm/: wasm_test.go
wasm/modules/utxotx/: Cargo.toml  build.rs
wasm/modules/utxotx/.cargo/: config.toml
wasm/modules/utxotx/src/: lib.rs
wasm/modules/utxotx/src/batik/: mod.rs
wasm/modules/utxotx/src/messages/: mod.rs  resolved.rs  transaction.rs  validation_api.rs
(+255 files in other folders)
