# Copyright IBM Corp. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "sigval"
version = "0.0.1"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ecdsa = "0.9"
hex = "0.4"
protobuf = "2.14"
simple_asn1 = "0.5"
signature = "1.2"

[dependencies.p256]
version = "0.6"
features = ["ecdsa-core", "ecdsa"]

[profile.release]
opt-level = "s"
lto = true

[build-dependencies]
protobuf-codegen-pure = "2.3"

[dev-dependencies]
