# Copyright IBM Corp. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "utxotx"
version = "0.0.1"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ecdsa = "0.9.0"
hex = "0.4.2"
protobuf = "2.14.0"
simple_asn1 = "0.5.0"
signature = "1.2.2"

[dependencies.p256]
version = "0.6.0"
features = ["ecdsa-core", "ecdsa"]

[profile.release]
opt-level = "s"
lto = true

[build-dependencies]
protobuf-codegen-pure = "2.3"
